kubernetes/istio-demo/tcp-router/02-curl-client-pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: grpc-client
  labels:
    app: grpc-client
spec:
  containers:
    - name: grpc-client
      image: lukelau/grpc-client:1.2
      command: ['sh', '-c', 'sleep 100000']
