kubernetes/istio-demo/tcp-router/00-two-service-01.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: http-echo-server
    version: v1
  name: http-echo-server
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: http-echo-server
      version: v1
  template:
    metadata:
      labels:
        app: http-echo-server
        version: v1
    spec:
      containers:
        - image: lukelau/echo:0.0.1
          imagePullPolicy: IfNotPresent
          name: http-echo-server
          args:
            - '-server.addr'
            - '0.0.0.0:8080'
---
apiVersion: v1
kind: Service
metadata:
  name: grpc-demo-server
  labels:
    app: grpc-demo-server
spec:
  ports:
    - name: grpc
      port: 1111
      targetPort: 8080
  selector:
    app: http-echo-server
    version: v1
