kubernetes/istio-demo/tcp-router/01-two-service-02.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: http-echo-server-v2
    version: v2
  name: http-echo-server-v2
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: http-echo-server-v2
      version: v2
  template:
    metadata:
      labels:
        app: http-echo-server-v2
        version: v2
    spec:
      containers:
        - image: lukelau/echo:0.0.1
          imagePullPolicy: IfNotPresent
          name: http-echo-server
          args:
            - '-server.addr'
            - '0.0.0.0:8080'
---
apiVersion: v1
kind: Service
metadata:
  name: svc2
  labels:
    app: http-echo-server-v2
spec:
  ports:
    - name: tcp
      port: 2222
      targetPort: 8080
  selector:
    app: http-echo-server-v2
    version: v2
