kubernetes/istio-demo/tcp-router/04-two-service-to-gateway.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: svc00
  namespace: istio-system
  labels:
    app: svc00
spec:
  ports:
    - port: 1111
      targetPort: 3333
  selector:
    app: istio-ingressgateway
    istio: ingressgateway
---
kind: Service
apiVersion: v1
metadata:
  name: svc01
  namespace: istio-system
  labels:
    app: svc01
spec:
  ports:
    - port: 2222
      targetPort: 4444
  selector:
    app: istio-ingressgateway
    istio: ingressgateway
