kubernetes/istio-demo/tcp-router/05-virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: g3333
  namespace: istio-system
spec:
  hosts:
    - "*"
  gateways:
    - g4444
  tcp:
    - gateways:
        - g3333
      route:
        - destination:
            host: svc1.default.svc.cluster.local
            port:
              number: 2222
    - gateways:
        - g4444
      route:
        - destination:
            host: svc2.default.svc.cluster.local
            port:
              number: 2222
